--- a/src/app/projects-list/project-edit/project-edit.component.html
+++ b/src/app/projects-list/project-edit/project-edit.component.html
@@ -1,1 +1,27 @@
-<p>project-edit works!</p>
+<div class="row">
+    <div class="col">
+        <form action="">
+            <div class="row">
+                <div class="col-sm-5 form-group">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" class="form-control">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-5 form-group">
+                    <label for="amount">Amount</label>
+                    <input type="number" name="amount" id="amount" class="form-control">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <button class="btn btn-success">Add</button> 
+                    <button class="btn btn-danger">Delete</button> 
+                    <button class="btn btn-primary">Clear</button> 
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
