--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
     <div class="container">
-        <a class="navbar-brand" href="#"><img src="/favicon.ico" alt="" width="25"></a>
+        <a class="navbar-brand" href="#" (click)="onSelect('Home')"><img src="/favicon.ico" alt="" width="25"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
             aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -9,13 +9,25 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#" (click)="onSelect('Home')">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Recipes</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#" (click)="onSelect('About')">About</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Projects</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#" (click)="onSelect('Skills')">Skills</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#" (click)="onSelect('Projects')">Projects</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#" (click)="onSelect('Clients')">Clients</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#" (click)="onSelect('Contact')">Contact</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#" (click)="onSelect('Ressources')">Ressources</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -23,5 +35,6 @@
                 <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
+        
     </div>
 </nav>
