--- a/src/app/recipe/recipe-list/recipe-list.component.html
+++ b/src/app/recipe/recipe-list/recipe-list.component.html
@@ -1,4 +1,5 @@
-<div class="row">
+<br>
+<div class="container row">
     <div class="col-xs-12">
         <button class="btn btn-success">New Recipe</button>
     </div>
@@ -8,14 +9,16 @@
 
 <div class="row">
     <div class="col">
-        <a href="#" class="list-group-item clearfix" *ngFor="let recipe of recipes">
-            <div class="pull-left">
-                <h4 class="list-group-item-heading"> {{recipe.name}} </h4>
-                <p class="list-group-item-text"> {{recipe.description}} </p>
+        <a href="#" class="list-group-item clearfix bg-light" *ngFor="let recipe of recipes">
+            <div class="row">
+                <div class="col-auto">
+                    <img [src]="recipe.imgPath" alt="" class="img-responsive" style="max-height: 40px;">
+                </div>
+                <div class="col">
+                    <h4 class="list-group-item-heading"> {{recipe.name}} </h4>
+                    <p class="list-group-item-text"> {{recipe.description}} </p>
+                </div>
             </div>
-            <span class="pull-right">
-                <img [src]="recipe.imgPath" alt="" class="img-responsive" style="max-height: 40px;">
-            </span>
         </a>
         <app-recipe-item></app-recipe-item>
     </div>
